--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
     "moment": "^2.29.3",
     "popper.js": "^1.16.1",
     "react": "^18.1.0",
+    "react-alice-carousel": "^2.6.1",
     "react-bootstrap": "^2.3.1",
     "react-dom": "^18.1.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^8.2.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
