--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "i18next": "^21.8.8",
     "jquery": "^3.6.0",
     "moment": "^2.29.3",
     "popper.js": "^1.16.1",
@@ -17,8 +18,9 @@
     "react-alice-carousel": "^2.6.1",
     "react-bootstrap": "^2.3.1",
     "react-dom": "^18.1.0",
+    "react-i18next": "^11.17.0",
     "react-responsive-carousel": "^3.2.23",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^8.2.2",
