--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.8.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "i18next": "^21.8.8",
@@ -17,6 +18,7 @@
     "react": "^18.1.0",
     "react-alice-carousel": "^2.6.1",
     "react-bootstrap": "^2.3.1",
+    "react-chartjs-2": "^4.2.0",
     "react-dom": "^18.1.0",
     "react-i18next": "^11.17.0",
     "react-responsive-carousel": "^3.2.23",
